--- a/0-elastic-kibana-crud/docker-compose.yaml
+++ b/0-elastic-kibana-crud/docker-compose.yaml
@@ -9,12 +9,23 @@ services:
       - elastic-net
     ports:
       - 9200:9200
+    environment:
+      discovery.type: single-node
+      cluster.name: dev-cluster
+      node.name: dev-node
+      ELASTIC_PASSWORD: $ELASTIC_PASSWORD
     deploy:
       resources:
         limits:
           memory: 1G
         reservations:
           memory: 512M
+    healthcheck:
+      test: ["CMD-SHELL", "nc -z localhost 9200 || exit 1"]
+      interval: 5s
+      timeout: 1s
+      retries: 5
+      start_period: 20s
   kibana:
     image: docker.elastic.co/kibana/kibana:8.16.0
     container_name: kibana
@@ -23,7 +34,8 @@ services:
     networks:
       - elastic-net
     depends_on:
-      - elasticsearch
+      elasticsearch:
+        condition: service_healthy
 
 networks:
   elastic-net: {}
