--- a/0-elastic-kibana-crud/docker-compose.yaml
+++ b/0-elastic-kibana-crud/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.16.0
     container_name: elasticsearch
     restart: always
+    volumes:
+      - elastic-data:/usr/share/elasticsearch/data
     networks:
       - elastic-net
     ports:
@@ -21,7 +23,7 @@ services:
         reservations:
           memory: 512M
     healthcheck:
-      test: ["CMD-SHELL", "nc -z localhost 9200 || exit 1"]
+      test: [ "CMD-SHELL", "nc -z localhost 9200 || exit 1" ]
       interval: 5s
       timeout: 1s
       retries: 5
@@ -36,6 +38,9 @@ services:
     depends_on:
       elasticsearch:
         condition: service_healthy
+
+volumes:
+  elastic-data: {}
 
 networks:
   elastic-net: {}
