--- a/0-elastic-kibana-docker/docker-compose.yaml
+++ b/0-elastic-kibana-docker/docker-compose.yaml
@@ -86,6 +86,23 @@ services:
       retries: 10
       start_period: 20s
 
+  logstash:
+    image: docker.elastic.co/logstash/logstash:$STACK_VERSION
+    container_name: logstash
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+    volumes:
+      - ./logstash/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+      - certs:/usr/share/logstash/certs
+      - ./logstash/my-app.log:/usr/share/logstash/my-app/my-app.log
+    environment:
+      HTTP_HOST: logstash
+      HTTP_PORT: 9600
+      XPACK_MONITORING_ENABLED: false
+      XPACK_MONITORING_ELASTICSEARCH_HOSTS: https://elasticsearch:9200,http://elasticsearch:9200
+      ELASTIC_PASSWORD: $ELASTIC_PASSWORD
+
 volumes:
   certs: {}
   elastic-data: {}
