--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -96,6 +96,7 @@ services:
       - ./logstash/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
       - certs:/usr/share/logstash/certs
       - ./app/my-app.log:/usr/share/logstash/my-app/my-app.log
+      - logstash-data:/usr/share/logstash/data
     environment:
       HTTP_HOST: logstash
       HTTP_PORT: 9600
@@ -107,3 +108,4 @@ volumes:
   certs: {}
   elastic-data: {}
   kibana-data: {}
+  logstash-data: {}
