--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -5,5 +5,13 @@ input {
 }
 
 output {
+  elasticsearch {
+    hosts => ["https://elasticsearch:9200"]
+    user => "elastic"
+    password => "${ELASTIC_PASSWORD}"
+    index => "my-app"
+    ssl_enabled => true
+    ssl_certificate_authorities => ["/usr/share/logstash/config/certs/ca/ca.crt"]
+  }
   stdout {}
 }
