--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -1,6 +1,6 @@
 input {
   file {
-    path => "/usr/share/logstash/my-app/my-app.log"
+    path => "/usr/share/logstash/logs/my-app/app-*.log"
   }
 }
 
