chore: configure logstash to treat json lines

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -1,6 +1,8 @@
 input {
   file {
     path => "/usr/share/logstash/logs/my-app/app-*.log"
+    codec => "json"
+    close_older => "6 min"
   }
 }
 
