chore: display datetime in ISO format
note: this is useful because kibana can parse the time and display it depending on the timezone

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine:latest
-RUN apk update && apk upgrade && apk add --update bash
+RUN apk update && apk upgrade && apk add --update bash && apk add coreutils
 WORKDIR /app
 COPY ./script.sh .
 ENTRYPOINT ["/bin/bash"]
